fixed slight gap in content on mobile view

--- a/capstone-showcase/src/App.css
+++ b/capstone-showcase/src/App.css
@@ -10,7 +10,8 @@
 .content {
   /* margin-top: 60px; */
   transition: margin-left 0.3s ease;
-  width: 99vw;
+  width: 100vw;
+  overflow-x: hidden;
   /* display: flex; */
   justify-content: center;
 
