--- a/capstone-showcase/src/Menu.css
+++ b/capstone-showcase/src/Menu.css
@@ -35,9 +35,10 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 0 10px;
+  /* padding: 0 10px; */
   position: relative;
   font-size: 1.20rem;
+  width: 100%;
 }
 
 .parent {
